--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <!-- 重复四次对于每个视频 -->
       <div class="video-container">
           <video width="100%" muted autoplay loop>
-              <source src="./Mooshot_files/11111.MOV" type="video/mp4">
+              <source src="./Mooshot_files/1111.mp4" type="video/mp4">
               Your browser does not support the video tag.
           </video>
           <div class="overlay-text">An astronaut is walking on the moon</div>
