--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="content">
 <h1><strong>MoonShot: Towards Controllable Video Generation and Editing with Multimodal Conditions</h1>
 
-  <p id="authors"><a href="http://junhaozhang98.github.io"><b>David Junhao Zhang</b></a> <a href="https://menghanxia.github.io"><b>Dongxu Li</b></a> <a href="https://yzhang2016.github.io"><b>Hung Le</b></a><a href="https://yzhang2016.github.io"><b>Mike Zheng Shou</b></a><a href="https://yzhang2016.github.io"><b>Caiming Xiong</b></a><a href="https://yzhang2016.github.io"><b>Doyen Sahoo</b></a></p>
+  <p id="authors"><a href="http://junhaozhang98.github.io"><b>David Junhao Zhang</b></a> <a href="https://sites.google.com/view/dongxu-li/home"><b>Dongxu Li</b></a> <a href="https://sites.google.com/view/henryle2018/home"><b>Hung Le</b></a><a href="https://sites.google.com/view/showlab/home?authuser=0"><b>Mike Zheng Shou</b></a><a href="http://cmxiong.com/"><b>Caiming Xiong</b></a><a href="http://www.doyensahoo.com/"><b>Doyen Sahoo</b></a></p>
 
   <p style="text-align: center;">
   <span style="font-size: 16px"><b> Salesforce Research</b> &nbsp;&nbsp;<b> Show Lab, NUS</b> 
@@ -25,7 +25,7 @@
   <font size="+1">
     <p style="text-align: center;">
       <a href="https://arxiv.org/abs/2310.15169" target="_blank"><b>[arXiv]</b></a> &nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="https://github.com/arthur-qiu/LongerCrafter" target="_blank"><b>[Code(coming soon)]</b></a>
+      <a href="https://github.com/salesforce/LAVIS" target="_blank"><b>[Code(coming soon)]</b></a>
     </p>
   </font>
   <br>
@@ -273,6 +273,15 @@
   </div>
 </div>
 
+<body>
+    <!-- Your webpage content -->
+
+    <!-- Footer -->
+    <footer style="text-align: center; font-size: small;">
+        Thank <a href="http://haonanqiu.com/projects/FreeNoise.html" target="_blank" rel="noopener noreferrer">FreeNoise</a> for the webpage template.
+    </footer>
+
+</body>
 
 
 
